RESOLVED FIXED301410
text-decoration-thickness and text-underline-offset not workin in vertical writing
https://bugs.webkit.org/show_bug.cgi?id=301410
Summary text-decoration-thickness and text-underline-offset not workin in vertical wr...
Bobby (Fu-Hsin) Tung
Reported 2025-10-23 23:24:43 PDT
Created attachment 477186 [details] a vertical writing html, you can change vrtl to hltr to see horizontal writing results I've used text-decoration-thickness and text-underline-offset to design ebook emphasis as highlight. Safari and Chrome used to render same result, however Safari changed behavior to draw a thin line instead. And there's no problem in horizontal writing text, but not working in vertical writing.
Attachments
a vertical writing html, you can change vrtl to hltr to see horizontal writing results (5.95 KB, application/xhtml+xml)
2025-10-23 23:24 PDT, Bobby (Fu-Hsin) Tung
no flags
Test reduction (246 bytes, text/html)
2025-10-28 14:32 PDT, alan
no flags
Patch (2.54 KB, patch)
2025-10-29 07:27 PDT, alan
ews-feeder: commit-queue-
Patch (2.91 KB, patch)
2025-10-29 20:01 PDT, alan
no flags
[fast-cq]Patch (2.91 KB, patch)
2025-10-30 08:22 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2025-10-24 09:48:45 PDT
Ahmad Saleem
Comment 2 2025-10-24 10:42:33 PDT
@Alan - is it similar to 302051@main or more involved? It seems to be Safari 18.3 onward change.
alan
Comment 3 2025-10-24 18:57:44 PDT
Yeah, this does not look great. Will look into it in a bit.
alan
Comment 4 2025-10-28 14:32:34 PDT
Created attachment 477216 [details] Test reduction
alan
Comment 5 2025-10-29 07:27:01 PDT
alan
Comment 6 2025-10-29 20:01:32 PDT
alan
Comment 7 2025-10-30 08:22:43 PDT
Created attachment 477234 [details] [fast-cq]Patch
EWS
Comment 8 2025-10-30 10:26:14 PDT
Committed 302352@main (973a82d25a19): <https://commits.webkit.org/302352@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477234 [details].
Note You need to log in before you can comment on or make changes to this bug.