text-decoration-thickness and text-underline-offset not workin in vertical writing https://bugs.webkit.org/show_bug.cgi?id=301410

Reviewed by Antti Koivisto.

Enable decorating box for vertical-lr content.

Test: fast/inline/decorating-box-vertical-rl.html

* LayoutTests/fast/inline/decorating-box-vertical-rl-expected.html: Added.
* LayoutTests/fast/inline/decorating-box-vertical-rl.html: Added.
* Source/WebCore/rendering/TextBoxPainter.cpp:
(WebCore::TextBoxPainter::collectDecoratingBoxesForBackgroundPainting):

Canonical link: https://commits.webkit.org/302352@main